--- a/site-html-css-criativo/style.css
+++ b/site-html-css-criativo/style.css
@@ -2,44 +2,15 @@
     margin: 0;
     padding: 0;
 }
-body{
-    .poppins-regular {
-        font-family: "Poppins", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-      
-      .poppins-bold {
-        font-family: "Poppins", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-      
-}
-    
-.cabeçalho {
+.cabecalho { 
     background-color: darkred;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     padding: 24px 0;
 }
-    
-.cabeçalho-imagem{
-    width: 30%;
-}
-    
-.cabeçalho-lista-item{
-    display: inline-block;
-    margin: 0 16px;
-    font-size: 24px;
+
+.cabecalho-imagem{ 
+    width: 25%;
 }
 
-.fundo{
-    background-image: rgb(131, 0, 0);
-}
-
-.capitão-america{
-    width: 300px;
+.homem-de-ferro-imagem{
+    width: 400px;
 }
